Excalidraw editor is working in dark mode only

--- a/.babelrc
+++ b/.babelrc
@@ -9,12 +9,6 @@
     ]
   ],
   "plugins": [
-    [
-      "@babel/plugin-transform-react-jsx",
-      {
-        "runtime": "automatic",
-        "importSource": "preact"
-      }
-    ]
+    "@babel/plugin-transform-react-jsx"
   ]
 }
