--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sn-extension-template",
-  "version": "0.1.0",
+  "name": "sn-excalidraw",
+  "version": "1.1.0",
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack",
